Fix bug : inputs overflowed of their box cause by padding and 100%

--- a/src/main/webapp/resources/_scss/base/_form.scss
+++ b/src/main/webapp/resources/_scss/base/_form.scss
@@ -13,6 +13,8 @@ textarea {
     font-size:        map-get($input, font-size);
     color:            map-get($input, color);
     margin:           0;
+    @include prefix(box-sizing, border-box, 'webkit' 'moz');
+
 }
 
 select,
